--- a/admin/package.json
+++ b/admin/package.json
@@ -21,7 +21,7 @@
     "lucide-react": "^0.560.0",
     "moment": "^2.30.1",
     "next": "^16.0.8",
-    "next-auth": "^4.24.6",
+    "next-auth": "^4.24.13",
     "papaparse": "^5.4.1",
     "qrcode": "^1.5.3",
     "react": "^19.2.1",
@@ -43,11 +43,11 @@
     "@types/node": "^20",
     "@types/papaparse": "^5.3.14",
     "@types/qrcode": "^1.5.5",
-    "@types/react": "^18",
+    "@types/react": "^19.2.7",
     "@types/react-datepicker": "^4.19.4",
-    "@types/react-dom": "^18",
+    "@types/react-dom": "^19.2.3",
     "eslint": "^9",
-    "eslint-config-next": "15.5.4",
+    "eslint-config-next": "^16.0.8",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
