company name changed from tmbc to teambo

--- a/server/env.example
+++ b/server/env.example
@@ -26,7 +26,7 @@ NODEMAILER_APP_PASSWORD=your-app-password
 SMTP_FROM=noreply@yourcompany.com
 
 # Company Information
-COMPANY_NAME=TMBC
+COMPANY_NAME=Teambo
 COMPANY_WEBSITE=https://yourcompany.com
 
 # Mobile App Deep Link
