--- a/user-app/app.json
+++ b/user-app/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Teambo Attendance",
+    "name": "Teambo",
     "slug": "attendance-app",
     "version": "1.0.0",
     "orientation": "portrait",
