local host to my ip

--- a/admin/env.local.example
+++ b/admin/env.local.example
@@ -1,9 +1,9 @@
 # NextAuth Configuration
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=http://192.168.31.75:3000
 NEXTAUTH_SECRET=your-nextauth-secret-here
 
 # API Configuration
-NEXT_PUBLIC_API_URL=http://localhost:5000
+NEXT_PUBLIC_API_URL=http://192.168.31.75:5000
 
 # Company Information
 NEXT_PUBLIC_COMPANY_NAME=TMBC
