--- a/server/env.example
+++ b/server/env.example
@@ -3,7 +3,7 @@ PORT=5000
 NODE_ENV=development
 
 # Database
-MONGODB_URI=mongodb://localhost:27017/tmbc-attendance
+MONGODB_URI=mongodb://192.168.31.75:27017/tmbc-attendance
 
 # JWT Secret
 JWT_SECRET=your-super-secret-jwt-key-here
@@ -13,7 +13,7 @@ FIRST_ADMIN_EMAIL=admin@tmbc.com
 FIRST_ADMIN_PASSWORD=Admin@123456
 
 # Admin Dashboard URL
-ADMIN_URL=http://localhost:3000
+ADMIN_URL=http://192.168.31.75:3000
 
 # Email Configuration
 SMTP_HOST=smtp.gmail.com
