--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "attendance monitoring app",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
