--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.8",
     "redis": "^5.8.2",
+    "socket.io": "^4.8.3",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
