--- a/user-app/package.json
+++ b/user-app/package.json
@@ -49,6 +49,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-pager-view": "^6.9.1",
     "react-native-reanimated": "~4.1.1",
